# morg

./: .clang-format  CMakeLists.txt  README.md  morg.cpp
include/morg/: driver.h  morg.h  parser.h  types.h
tests/: test_morg.cpp
